correction check version tablet

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -238,6 +238,7 @@ img.restau-img {
     top: -30px;
 }
 
+/* pour tablet uniquement*/
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     .menus {
         display:flex;
@@ -254,6 +255,16 @@ img.restau-img {
         width: 27%;  
         flex-direction:row;
     }    
+    .card-menu:hover .fa-circle-check {
+        position: absolute;
+        font-size:x-large;
+        right:1.5vw;
+        bottom:15px;
+        background-color: white;
+        border-radius: 20px;
+        color : var(--tertiary);
+        transform: rotate(360deg);
+    }
     .plat .card-menu1 {
         margin-left: 0px;
     }
@@ -261,6 +272,8 @@ img.restau-img {
         margin-left: 100px;
     }
 }
+
+/* pour desktop uniquement */
 @media only screen and (min-width: 993px){
     .menus {
         display:flex;
@@ -269,10 +282,29 @@ img.restau-img {
     }
     .article--menu {            /* Bloc Article menus */
         display: flex;
-        flex-direction: column;    
+        flex-direction: column;  
+        width: auto;  
     }
 
+    .card-menu {            /* Bloc Article menus */
+        display: flex;
+        width: 100%;  
+        flex-direction:row;
+    }
+
+    .card-menu:hover .fa-circle-check {
+        position: absolute;
+        font-size:x-large;
+        left:2px;
+        bottom:15px;
+        background-color: white;
+        border-radius: 20px;
+        color : var(--tertiary);
+        transform: rotate(360deg);
+    }
 }
+
+/* pour tablet et desktop */
 @media only screen and (min-width: 768px){
     .deroule .decale{ /* décalage du mot PLAT pour 2 restaurants d'après maquette */
         padding-left: 00px;
@@ -287,8 +319,6 @@ img.restau-img {
         color : var(--tertiary);
         transform: rotate(360deg);
     }
-
-
 
     .footer--menu {              /* positionnement du footer */
         position: relative;
